# petroleum-rag

./: .env.example  .github_structure.txt  .gitignore  CODE_REVIEW.md  README.md  analyze_results.py  benchmark.py  config.py  demo_app.py  docker-compose.yml  models.py  pyproject.toml  run_test_cases.py  start_app.sh  test_cases.json  test_parser_parallelization.py  verify_setup.py
.claude/: DOCKER_SETUP.md  README.md  chroma_quickref.md  settings.local.json
config/: prometheus.yml
dashboards/: dashboard.yml  rag_dashboard.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  DEPLOYMENT.md  GCP_DEPLOYMENT_GUIDE.md  GCP_DEPLOY_README.md  GCP_SERVERLESS_README.md  QUICK_START.md  QUICK_START_CACHING.md  UI_ENHANCEMENTS.md  USER_GUIDE.md  weaviate_implementation.md
docs/parsers/: vertex_docai.md
docs/workplan/: 4-FINAL-Parallel-Benchmark-POC.md  5-WORKPLAN-test-cases.md  COMPARISON.md  PARALLEL-EXECUTION-PLAN.md  README.md
embeddings/: README.md  __init__.py  embedder.py  vertex_embedder.py
evaluation/: __init__.py  evaluator.py  metrics.py  queries.json  vertex_evaluator.py
examples/: evaluation_demo.py  test_weaviate_hybrid_search.py  vertex_parser_example.py
grafana/datasources/: prometheus.yml
parsers/: PAGEINDEX_README.md  __init__.py  base.py  docling_parser.py  llamaparse_parser.py  pageindex_parser.py  vertex_parser.py
scripts/: README.md  benchmark_async_migration.py  demo_llamaparse.py  manage_cache.py  monitoring_server.py  run_e2e_test.sh  start_monitoring.sh  start_services.sh  stop_services.sh  test_docling_demo.py  test_embeddings_integration.py  test_falkordb_manual.py  test_pageindex_basic.py  verify_chroma_implementation.py  verify_circuit_breakers.py  verify_embeddings.py  verify_services.sh  verify_wave2.py
scripts/deployment/: deploy_cloudrun_serverless.sh  deploy_to_gcp.sh
src/petroleum_rag/testing/: __init__.py  models.py  report_generator.py  test_runner.py  validator.py
storage/: FALKORDB_README.md  README.md  __init__.py  base.py  chroma_store.py  falkordb_store.py  weaviate_store.py
tests/: __init__.py  conftest.py  test_cache.py  test_chroma_store.py  test_circuit_breaker.py  test_docling_parser.py  test_embedder.py  test_evaluator.py  test_falkordb_store.py  test_llamaparse_parser.py  test_metrics.py  test_rate_limiter.py  test_vertex_parser.py  test_weaviate_store.py
tests/e2e/: generate_sample_doc.py  test_full_pipeline.py
tests/integration/: __init__.py  test_benchmark_integration.py  test_demo_app.py  test_parser_storage_integration.py
utils/: __init__.py  cache.py  circuit_breaker.py  logging.py  metrics.py  rate_limiter.py
