[project]
name = "petroleum-rag-benchmark"
version = "0.1.0"
description = "Benchmark system for RAG parsers and storage backends on petroleum engineering documents"
authors = [
    {name = "Gregory Dickson", email = "gregory@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Document Parsers
    "llama-parse>=0.4.0",
    "docling>=2.0.0",
    "pageindex>=0.1.0",
    "pymupdf>=1.23.0",  # Fallback for PageIndex
    "google-cloud-documentai>=2.20.0",

    # Storage Backends
    "chromadb>=0.4.22",
    "weaviate-client>=4.4.0",
    "falkordb>=1.0.0",

    # LLM & Embeddings
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "sentence-transformers>=2.3.0",

    # Data & Visualization
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "streamlit>=1.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "reportlab>=4.0.0",  # For E2E test PDF generation

    # Additional utilities
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "circuitbreaker>=2.0.0",

    # Monitoring & Metrics
    "prometheus-client>=0.20.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html --timeout=60 --strict-markers"
timeout = 60
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that may require Docker services",
    "e2e: End-to-end tests that test the full pipeline",
    "requires_api_keys: Tests that require API keys (LlamaParse, Anthropic, etc)",
    "requires_docker: Tests that require Docker services (ChromaDB, Weaviate, FalkorDB)",
    "requires_vertex: Tests that require Google Cloud Vertex AI credentials",
    "slow: Tests that take more than 10 seconds to run",
]
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/site-packages/*",
    "*/lib/python*/*",
    "*/Library/Python/*",
    "tests/*",
    "test_*.py",
    "verify_*.py",
    "demo_*.py",
    "*_manual.py",
    "benchmark_async_migration.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
